update event service
